# ewilib

./: CMakeLists.txt  Makefile  README.rst  make.bat
src/: CMakeLists.txt  backbone.c  backbone.h
tests/: CMakeLists.txt  main.c  test_backbone.c  test_backbone.h
